--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "About") %>
+<h1>About</h1>
 This is the about page for the
 <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
 sample application.
